* Fix render bug with repeaters, add repeater item

--- a/platforms/windows/projects/World/World.vcxproj
+++ b/platforms/windows/projects/World/World.vcxproj
@@ -464,7 +464,7 @@
     <ClInclude Include="$(MC_ROOT)\source\world\entity\Creeper.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\entity\Pig.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\entity\Rocket.hpp" />
-    <ClInclude Include="..\..\..\..\source\world\item\RedstoneItem.hpp" />
+    <ClInclude Include="..\..\..\..\source\world\item\RepeaterItem.hpp" />
     <ClInclude Include="..\..\..\..\source\world\tile\ButtonTile.hpp" />
     <ClInclude Include="..\..\..\..\source\world\tile\DiodeTile.hpp" />
     <ClInclude Include="..\..\..\..\source\world\tile\LeverTile.hpp" />
