Bugfixes & Cleanup * Cleaned up GameMods.hpp & fixed all macro toggles * Made world border unpickable/unhighlightable * Lowered mob reach range for creative mode from 32 blocks to 7 (as in 0.12.1) * Fixed uninitialized variables (bugs could appear depending on the compiler)     * "PathfinderMob::m_pAttackTarget" (caused a crash)     * "Entity::field_C4" (caused entities to suffocate always) * Fixed Random.cpp for compilation with C++03 by using "std::numeric_limits" instead of "INFINITY" * Documented Texture::field_C as m_hasAlpha * Deleted unused "GLTexture" struct * Removed ModelPart::renderHorrible * Added other mob textures to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -163,6 +163,16 @@ xcuserdata/
 /game/assets/misc/foliagecolor.png
 /game/assets/misc/grasscolor.png
 /game/assets/mob/char.png
+/game/assets/mob/chicken.png
+/game/assets/mob/cow.png
+/game/assets/mob/creeper.png
+/game/assets/mob/pig.png
+/game/assets/mob/pigzombie.png
+/game/assets/mob/sheep.png
+/game/assets/mob/sheep_fur.png
+/game/assets/mob/skeleton.png
+/game/assets/mob/spider.png
+/game/assets/mob/zombie.png
 /game/assets/particles.png
 /game/assets/terrain.png
 /game/assets/gui/buynow.png
@@ -206,4 +216,3 @@ xcuserdata/
 /game/assets/gui/feedback_fill.png
 /game/assets/gui/feedback_outer.png
 /game/assets/snow.png
-/game/assets/mob/pig.png
