Documentation & Decompilation * Fixed a bug which caused mobs to not catch fire * Added Flint, Porkchops, and Eggs * Mobs can now drop loot upon death * Added Chickens * Added scaffolding for gamemodes in replication and level data. This can be enabled with 'TEST_GAMEMODE_REPLICATION'. * Documented a number of variables

--- a/platforms/windows/projects/World/World.vcxproj
+++ b/platforms/windows/projects/World/World.vcxproj
@@ -458,6 +458,7 @@
     <ClInclude Include="$(MC_ROOT)\source\world\entity\Creeper.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\entity\Pig.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\entity\Rocket.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\world\gamemode\GameType.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
