--- a/platforms/windows/projects/OpenGL/OpenGL.vcxproj
+++ b/platforms/windows/projects/OpenGL/OpenGL.vcxproj
@@ -41,6 +41,11 @@
   <ItemGroup>
     <ClCompile Include="$(MC_ROOT)\thirdparty\GL\GLExt.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Common\Common.vcxproj">
+      <Project>{71774270-fd1b-4269-bd8f-f75a52d43eb6}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
