--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -179,6 +179,10 @@ add_library(reminecraftpe-core STATIC
     world/entity/Monster.cpp
     world/entity/Rocket.cpp
     world/entity/MobFactory.cpp
+	world/entity/Chicken.cpp
+	world/entity/Cow.cpp
+	world/entity/Creeper.cpp
+	world/entity/Pig.cpp
     world/level/Dimension.cpp
     world/level/Material.cpp
     world/level/LevelListener.cpp
