--- a/.gitignore
+++ b/.gitignore
@@ -123,7 +123,7 @@ xcuserdata/
 /sound_data
 
 # Ignore linux/mingw build artifacts.
-/build
+/build*
 /minecraftcpp
 /minecraftcpp.exe
 
@@ -207,3 +207,7 @@ xcuserdata/
 /game/assets/gui/feedback_outer.png
 /game/assets/snow.png
 /game/assets/mob/pig.png
+
+# CLion
+/.idea
+/cmake-build-*
