--- a/platforms/sdl/CMakeLists.txt
+++ b/platforms/sdl/CMakeLists.txt
@@ -2,8 +2,11 @@ cmake_minimum_required(VERSION 3.16.0)
 project(reminecraftpe-sdl)
 
 # SDL Build
-add_compile_definitions(USE_SDL USE_OPENAL HANDLE_CHARS_SEPARATELY)
-set(USE_SDL TRUE)
+target_compile_definitions(reminecraftpe-core
+    PUBLIC USE_SDL
+    PUBLIC USE_OPENAL
+    PUBLIC HANDLE_CHARS_SEPARATELY
+)
 
 # WASM
 if(EMSCRIPTEN)
@@ -51,12 +54,16 @@ else()
 endif()
 
 # Core
-add_subdirectory(../../source source)
 target_link_libraries(reminecraftpe reminecraftpe-core)
 
-# OpenAL
-add_subdirectory(../openal openal)
-target_link_libraries(reminecraftpe reminecraftpe-openal)
+# Sound
+if(WIN32)
+    add_subdirectory(../directsound directsound)
+    target_link_libraries(reminecraftpe reminecraftpe-directsound)
+else()
+    add_subdirectory(../openal openal)
+    target_link_libraries(reminecraftpe reminecraftpe-openal)
+endif()
 
 # stb_image (If Needed)
 if(NOT EMSCRIPTEN)
@@ -65,8 +72,46 @@ if(NOT EMSCRIPTEN)
 endif()
 
 # SDL
+add_library(SDL INTERFACE)
+if(ANDROID OR WIN32)
+    # Use Vendored SDL2 (Only For Android)
+    add_subdirectory(../../thirdparty/SDL2/src SDL EXCLUDE_FROM_ALL)
+    target_link_libraries(SDL INTERFACE SDL2::SDL2)
+elseif(EMSCRIPTEN)
+    # Use Emscripten's SDL2
+    set(SDL_FLAG -sUSE_SDL=2)
+    target_compile_options(SDL INTERFACE "${SDL_FLAG}")
+    target_link_options(SDL INTERFACE "${SDL_FLAG}")
+else()
+    # Use System SDL2
+    find_package(SDL2 REQUIRED)
+    target_link_libraries(SDL INTERFACE SDL2::SDL2)
+endif()
+target_link_libraries(reminecraftpe-core PUBLIC SDL)
 if(TARGET SDL2::SDL2main)
     target_link_libraries(reminecraftpe SDL2::SDL2main)
+endif()
+
+# OpenGL
+if(NOT EMSCRIPTEN AND NOT ANDROID AND NOT WIN32)
+    option(USE_GLES1_COMPATIBILITY_LAYER "Whether To Enable The GLESv1_CM Compatibility Layer" TRUE)
+else()
+    set(USE_GLES1_COMPATIBILITY_LAYER TRUE CACHE BOOL "" FORCE)
+endif()
+if(USE_GLES1_COMPATIBILITY_LAYER)
+    set(GLES_COMPATIBILITY_LAYER_USE_SDL TRUE CACHE BOOL "" FORCE)
+    set(GLES_COMPATIBILITY_LAYER_DEPENDENCY SDL CACHE STRING "" FORCE)
+    set(GLES_COMPATIBILITY_LAYER_USE_ES3 FALSE CACHE BOOL "" FORCE)
+    add_subdirectory(../../thirdparty/gles-compatibility-layer gles-compatibility-layer)
+    target_link_libraries(reminecraftpe-core PUBLIC gles-compatibility-layer)
+    target_compile_definitions(reminecraftpe-core PUBLIC USE_GLES1_COMPATIBILITY_LAYER)
+    if(EMSCRIPTEN)
+        # Use WebGL 2
+        target_link_options(reminecraftpe-core PUBLIC -sMIN_WEBGL_VERSION=2 -sMAX_WEBGL_VERSION=2)
+    endif()
+else()
+    find_package(OpenGL REQUIRED)
+    target_link_libraries(reminecraftpe-core PUBLIC OpenGL::OpenGL)
 endif()
 
 # WASM
@@ -77,9 +122,7 @@ if(EMSCRIPTEN)
     target_link_options(reminecraftpe PRIVATE -sEXPORTED_FUNCTIONS=_main,_resize_from_js -sEXPORTED_RUNTIME_METHODS=ccall)
 endif()
 
-# Assets
+# Embed Assets
 if(EMSCRIPTEN)
     target_link_options(reminecraftpe PRIVATE --use-preload-plugins --preload-file "${CMAKE_CURRENT_SOURCE_DIR}/../../game@/")
-elseif(NOT ANDROID)
-    file(CREATE_LINK "${CMAKE_CURRENT_SOURCE_DIR}/../../game/assets" "${CMAKE_CURRENT_BINARY_DIR}/assets" SYMBOLIC)
 endif()
