Try To Fix The Build Again

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -65,6 +65,7 @@ jobs:
                 sudo port install libpng +universal
           - name: Build macOS Archive
             run: |
+                ln -s platforms/sound/openal platforms/openal # Please someone fix this properly later.
                 cd platforms/macos/projects/Minecraft
                 xcodebuild -scheme "MinecraftClient.SDL2" \
                 -archivePath $RUNNER_TEMP/GitHubActions_MacOS_SDL2.xcarchive \
